fixes for packaging befor pushing to melpa

--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@
 This file bootstraps itself to provide the functionality needed to use
 =orgstrap= in any =org-mode= file.
 
-=orgstrap= works with all versions of emacs since =24.1= and all versions of org since =8.2.10=.
+=orgstrap= works with all versions of emacs since =24.4= and all versions of org since =8.2.10=.
 
 * Getting started
 Using =orgstrap= is easy.
@@ -688,8 +688,7 @@ requiring any additional steps."
                                        t)
 
     (orgstrap--with-block orgstrap-helper-block-name
-      (error "TODO")
-      )))
+      (error "TODO"))))
 
 ;;(defvar orgstrap--helpers nil)
 ;;(setq orgstrap--helpers nil)
@@ -762,6 +761,10 @@ minimal as possible is critical.
 
 ;; Author: Tom Gillespie
 ;; URL: https://github.com/tgbugs/orgstrap
+;; Keywords: lisp org org-mode bootstrap
+;; Version: 1.0
+;; URL: https://github.com/purcell/flycheck-package
+;; Package-Requires: ((emacs "24.4"))
 
 ;;;; License and Commentary
 
@@ -774,7 +777,7 @@ minimal as possible is critical.
 ;; `orgstrap-get-block-checksum' reuses code from
 ;; `org-babel-check-confirm-evaluate' which is
 ;; (at the time of writing) in ob-core.el and licensed
-;; as part of emacs.
+;; as part of Emacs.
 
 ;; Code in an orgstrap block is usually meant to be executed directly by its
 ;; containing org file. However, if the code is something that will be reused
