--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: dfd1f64a8320e77cfc4568bf3fd01bbfc427f51e89363c663d9bf731936ffc2a; -*-
+# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 99787ec53cfb58802c6b081673c3232128218a74b12be27fbc2f0013631bcf5f; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil \n:nil
@@ -342,7 +342,7 @@ if you need them. See [[(clrin)]] and [[(oab)]] for examples in this file.
 Here is what the prop line local variables at the start of the file looks like.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: dfd1f64a8320e77cfc4568bf3fd01bbfc427f51e89363c663d9bf731936ffc2a; -*-
+# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 99787ec53cfb58802c6b081673c3232128218a74b12be27fbc2f0013631bcf5f; -*-
 #+end_src
 
 Here is what the =:noexport:= at the end of the file looks like.
@@ -411,28 +411,27 @@ that anyone anywhere is running one of those versions is approximately zero.
 #+begin_src emacs-lisp :results none :lexical yes :noweb yes
 ;;; edit helpers
 (defvar orgstrap-orgstrap-block-name "orgstrap"
-  "Set to orgstrap by convention to make it easier to search for orgstrap
-if someone encounters an orgstrapped file and wants to know what is going on.")
+  "Set the default blockname to orgstrap by convention.
+This makes it easier to search for orgstrap if someone encounters
+an orgstrapped file and wants to know what is going on.")
 
 (defvar orgstrap-default-cypher 'sha256
-  "default cypher passed to `secure-hash' when hashing blocks")
+  "The default cypher passed to `secure-hash' when hashing blocks.")
 
 (defcustom orgstrap-on-change-hook nil
-  "When `orgstrap-mode' is enabled this hook that is run via `before-save-hook'
-when the contents of the orgstrap block have changed."
+  "This hook is run via `before-save-hook' when symbol `orgstrap-mode' is enabled and when the contents of the orgstrap block have changed."
   :type 'hook
   :group 'orgstrap)
 
 ;; edit utility functions
 (defun orgstrap--current-buffer-cypher ()
-  "Return the cypher used for the current buffer `orgstrap-cypher' or
-`orgstrap-default-cypher' if there is not buffer local cypher"
+  "Return the cypher used for the current buffer `orgstrap-cypher' or `orgstrap-default-cypher' if there is not buffer local cypher."
   (if (boundp 'orgstrap-cypher) orgstrap-cypher orgstrap-default-cypher))
 
 <<orgstrap-expand-body>>
 
 (defmacro orgstrap--with-block (blockname &rest macro-body)
-  "Go to a named source block and do something.
+  "Go to the source block named BLOCKNAME and execute MACRO-BODY.
 The macro provides local bindings for four names: `info', `params', `body-unexpanded', and `body'."
   (declare (indent defun))
   ;; consider accepting :lite or a keyword or something to pass
@@ -455,7 +454,7 @@ The macro provides local bindings for four names: `info', `params', `body-unexpa
 
 ;; edit user facing functions
 (defun orgstrap-get-block-checksum (&optional cypher)
-  "Calculate the `orgstrap-block-checksum' for the current buffer."
+  "Calculate the `orgstrap-block-checksum' for the current buffer using CYPHER."
   (interactive)
   (orgstrap--with-block orgstrap-orgstrap-block-name
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
@@ -464,9 +463,11 @@ The macro provides local bindings for four names: `info', `params', `body-unexpa
       (secure-hash cypher body-normalized))))
 
 (defun orgstrap-add-block-checksum (&optional cypher checksum)
-  "Add new value of `orgstrap-block-checksum' to file local variables of the `current-buffer'
-The optional `cypher' argument should almost never be used, instead change the value of
-`orgstrap-default-cypher' or manually change the file property line variable."
+  "Add `orgstrap-block-checksum' to file local variables of `current-buffer'.
+The optional CYPHER argument should almost never be used,
+instead change the value of `orgstrap-default-cypher' or manually
+change the file property line variable. CHECKSUM can be passed
+directly if it has been calculated before and only needs to be set."
   (interactive)
   (let* ((cypher (or cypher (orgstrap--current-buffer-cypher)))
          (orgstrap-block-checksum (or checksum (orgstrap-get-block-checksum cypher))))
